# libbitcoinpqc

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  REPORT.md  bench_results.sh  bench_silent.sh  build.rs  build.sh  test_direct.c
.github/workflows/: ci.yml  rust.yml
benches/: README.md  REPORT.md  sig_benchmarks.rs
docs/: user_provided_entropy.md
examples/: CMakeLists.txt  basic.rs  entropy_demo.c  example_all.c
fuzz/: Cargo.toml  README.md  output.txt
fuzz/fuzz_targets/: cross_algorithm_fuzz.rs  key_parsing_fuzz.rs  keypair_generation_fuzz.rs  sign_verify_fuzz.rs  signature_parsing_fuzz.rs
include/libbitcoinpqc/: bitcoinpqc.h  falcon.h  fn_dsa.h  ml_dsa.h  mldsa.h  slh_dsa.h
nodejs/: .gitignore  README.md  binding.gyp  package-lock.json  package.json  tsconfig.json
nodejs/examples/: basic-usage.ts
nodejs/scripts/: sync-c-sources.sh
nodejs/src/: library.ts  types.ts
nodejs/src/__tests__/: bitcoinpqc.test.ts
nodejs/src/native/: mock_bitcoinpqc_addon.cc
nodejs/tests/: bitcoinpqc.test.ts
python/: setup.py
src/: bindings_include.rs  bitcoinpqc.c  lib.rs  randombytes_custom.c  randombytes_custom.h
src/falcon/: falcon.c
src/fn_dsa/: keygen.c  sign.c  utils.c  verify.c
src/fndsa/: fndsa.c
src/ml_dsa/: sign.c  utils.c  verify.c
src/mldsa/: mldsa.c
src/slh_dsa/: keygen.c  sign.c  utils.c
test/c_tests/: Makefile  ml_dsa_test  ml_dsa_test.c
tests/: algorithm_tests.rs  serialization_tests.rs
