[package]
name = "libbitcoinpqc"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin PQC Contributors"]
description = "Post-Quantum Cryptographic signature algorithms for Bitcoin"
repository = "https://github.com/bitcoin/libbitcoinpqc"
license = "MIT"

[dependencies]
hex = "0.4"
lazy_static = "1.5.0"
libc = "0.2"

[build-dependencies]
bindgen = "0.71.1"
cmake = "0.1"

[dev-dependencies]
hex = "0.4"
rand = "0.9"
criterion = "0.5"
secp256k1 = { version = "0.30", features = ["rand"] }
sha2 = "0.10"

[features]
default = []
# Enable this feature in your IDE for better code completion
# but never use it for actual builds
ide = []

[lib]
name = "bitcoinpqc"
crate-type = ["rlib", "staticlib", "cdylib"]

[[bench]]
name = "sig_benchmarks"
harness = false
