[package]
name = "bitcoinpqc"
version = "0.1.1"
edition = "2021"
authors = ["Hunter Beast <hunter@surmount.systems>"]
description = "Post-Quantum Cryptographic signature algorithms for Bitcoin (BIP-360)"
repository = "https://github.com/bitcoin/libbitcoinpqc"
license = "MIT"
keywords = ["bitcoin", "pqc", "cryptography", "bip-360", "qubit"]

[dependencies]
hex = "0.4"
libc = "0.2"
bitmask-enum = "2.2.5"

[build-dependencies]
bindgen = "0.71.1"
cmake = "0.1"

[dev-dependencies]
hex = "0.4"
rand = "0.9"
criterion = "0.5"
secp256k1 = { version = "0.30", features = ["rand"] }
sha2 = "0.10"

[features]
default = []
# Enable this feature in your IDE for better code completion
# but never use it for actual builds
ide = []

[lib]
name = "bitcoinpqc"
crate-type = ["rlib", "staticlib", "cdylib"]

[[bench]]
name = "sig_benchmarks"
harness = false
